Fix form colors and icon alignment

--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,6 @@
 ----------------------------------------------------------------
 # Variables
 # Normalize
-# Genericons
 # Typography
 # Elements
 # Forms
@@ -700,7 +699,7 @@ input[type=submit][disabled]:focus {
   background: var(--main-text-color);
   border: 0;
   border-radius: 2px;
-  color: var(--page-background-color);
+  color: var(--background-color);
   font-family: montserrat, "Helvetica Neue", sans-serif;
   font-weight: 700;
   letter-spacing: 0.046875em;
@@ -741,7 +740,7 @@ input[type=search],
 input[type=tel],
 input[type=number],
 textarea {
-  background: #f7f7f7;
+  background: var(--background-color);
   background-image: -webkit-linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
   border: 1px solid #d1d1d1;
   border-radius: 2px;
@@ -2237,6 +2236,13 @@ body:not(.search-results) .entry-summary > :last-child,
   height: 21px;
   margin: -0.1538461538em 0.5384615385em 0 0;
   width: 21px;
+}
+
+.entry-footer .icon {
+  position: relative;
+  /* Align more nicely with capital letters */
+  top: -0.0625em;
+  margin-right: 0.5em;
 }
 
 .sticky-post {
